--- a/components/footer.html
+++ b/components/footer.html
@@ -1,21 +1,27 @@
 <footer>
         
-    <h7>Find ROCKY on:<br></h7>
-    <a href="https://www.instagram.com/p_rocky" target="_blank">
-        <button>Instagram</button>
-    </a>
-    <a href="https://x.com/p_rockyent" target="_blank">
-        <button>Twitter</button>
-    </a>
-    <a href="https://www.youtube.com/@ROCKY_Onefineday_Ent." target="_blank">
-        <button>Youtube</button>
-    </a>
-    <a href="https://open.spotify.com/artist/3bQABAi10Xqg1WsMAhYdBZ" target="_blank">
-        <button>Spotify</button>
-    </a>
-    <a href="https://soundcloud.com/rockycl0ud" target="_blank">
-        <button>Soundcloud</button>
-    </a>
-
-    <p>&copy; 2025 ROCKY Archive. All Rights Reserved.</p>
+        <h7>Find ROCKY on:<br></h7>
+        <a href="https://www.instagram.com/p_rocky" target="_blank">
+                <button>Instagram</button>
+        </a>
+        <a href="https://x.com/p_rockyent" target="_blank">
+                <button>Twitter</button>
+        </a>
+        <a href="https://www.youtube.com/@ROCKY_Onefineday_Ent." target="_blank">
+                <button>Youtube</button>
+        </a>
+        <a href="https://open.spotify.com/artist/3bQABAi10Xqg1WsMAhYdBZ" target="_blank">
+                <button>Spotify</button>
+        </a>
+        <a href="https://soundcloud.com/rockycl0ud" target="_blank">
+                <button>Soundcloud</button>
+        </a>
+        <a href="https://rockyofficial.com/home" target="_blank">
+                <button>Official Site</button>
+        </a>
+        <a href="https://rockyjapanofficial.com" target="_blank">
+                <button>Japan Site</button>
+        </a>
+        
+        <p>&copy; 2025 ROCKY Archive. All Rights Reserved.</p>
 </footer>
