--- a/components/footer.html
+++ b/components/footer.html
@@ -23,5 +23,5 @@
                 <button>Japan Site</button>
         </a>
         
-        <p>&copy; 2025 ROCKY Archive. All Rights Reserved.</p>
+        <p>&copy; 2025 ROCKY Archive. All Rights Reserved. Created by @sporkler_</p>
 </footer>
